--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
     <button type="submit" id="submitButton">Submit</button>
     <p id="result"></p>
 
-    <script>
-      src = "index.js";
-    </script>
+    <script src =script.js></script>
   </body>
 </html>
