--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <button type="submit" id="submitButton">Submit</button>
     <p id="result"></p>
 
-    <script src =script.js></script>
+    <script src =index.js></script>
   </body>
 </html>
